--- a/memberServlet/WebContent/member/writeForm.html
+++ b/memberServlet/WebContent/member/writeForm.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 	<h3>회원가입</h3>
-	<form name="writeForm" method="post" action="/">
+	<form name="writeForm" method="post" action="/memberServlet/WriteServlet">
 	<table border="1" cellspacing="0" cellpadding="6">
 		<tr width="70">
 			<td>이름</td>
-			<td><input type="text" name="name" placeholder="이름입력" size=10></td>
+			<td><input type="text" name="name" id="name" placeholder="이름입력" size=10></td>
 		</tr>
 
 		<tr width="70">
