--- a/AJax/WebContent/ch01/helloApp.html
+++ b/AJax/WebContent/ch01/helloApp.html
@@ -5,42 +5,28 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form name="inputForm" method="post">
- <input type="text" name="name">
- <input type="button" value="입력" onclick="helloToServer()" />
+<form name="inputForm" method="post" action="">
+	<input type="text" name="name">
+	<input type="button" value="입력" onclick="helloToServer()" />
 </form>
 </body>
 <script type="text/javascript">
-var httpRequest;
+var XMLHttpRequest;
 function helloToServer(){
 	let name = encodeURIComponent(document.inputForm.name.value);
 	httpRequest = new XMLHttpRequest();
 	httpRequest.onreadystatechange = helloFromServer;
-	httpRequest.open("POST", "hello.jsp", true);
-	httpRequest.setRequestHeader("Content-Type", "application/x-www-form-urlencoded;charset=UTF-8");                             
-	httpRequest.send("name="+name);
+	httpRequest.open("POST", "hello.jsp?name="+name, true);
+	// 이름을 jsp로 보낸다
+		httpRequest.setRequestHeader("Content-Type","application/x-www.form-urlencode;charset=UTF-8");
+	httpRequest.send("");
 }
-
 function helloFromServer(){
-	if(httpRequest.readyState==4){
-		if(httpRequest.status==200){
-			alert("서버 응답 : "+httpRequest.responseText);
+	if(httpRequest.readyState == 4){
+		if(httpRequest.status == 200){
+			alert("서버응답 : " + httpRequest.responseText);
 		}
 	}
 }
 </script>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
