--- a/jQueryAJax/WebContent/exam/jQueryAJax03.html
+++ b/jQueryAJax/WebContent/exam/jQueryAJax03.html
@@ -17,29 +17,25 @@
 <script type="text/javascript">
 $(document).ready(function(){
 	$('#submit').click(function(){
-		let sendData = encodeURIComponent($('.user').val());
+		let sendData = 'username=' + $('input[name=username]').val();
+		//let sendData = {'username': $('.user').val()};
 		
-		/*
-		$.post('jQueryAJax02_data.jsp', //url
-				'username='+sendData, //서버로 보낼 데이터, data
-				function(data){ //success
-					$('#message').html(data);
-				},
-				'html' //dataType
-				);
-		*/
-		
-		$.get('jQueryAJax02_data.jsp?username='+sendData,
-				function(data){
-					$('#message').html(data);
-				},
-				'html'
-				);
+		$.ajax({
+			//type: 'get',
+			type: 'post',
+			url: 'jQueryAJax02_data.jsp',
+			data: sendData,
+			dataType: 'html',
+			success: function(data){
+				$('#message').html(data);
+			}
+		});
 	});
 });
 </script>
 </body>
 </html>
+
 
 
 
